eshopping-zoen-backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e-shopping-zone
  labels:
    name: e-shopping-zone
